[gd_scene load_steps=3 format=3 uid="uid://b2g3j8j4ludbi"]

[ext_resource type="PackedScene" uid="uid://cwdtjx0pfaujs" path="res://templates/ui_elements/turn_based_battle_screen/character_stats_panel.tscn" id="1_epcww"]
[ext_resource type="Script" path="res://templates/ui_elements/turn_based_battle_screen/turn_based_ui.gd" id="1_vo06i"]

[node name="turn_based_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vo06i")

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -192.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AttackButton" type="Button" parent="BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Attack"

[node name="EndTurnButton" type="Button" parent="BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "End Turn"

[node name="PlayerStatsPanel" parent="." instance=ExtResource("1_epcww")]
layout_mode = 1

[node name="EnemyStatsPanel" parent="." instance=ExtResource("1_epcww")]
layout_direction = 3
layout_mode = 1

[connection signal="pressed" from="BottomPanel/HBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="BottomPanel/HBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
